--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sass Example 1</title>
   </head>
-  <body></body>
+  <body>
+    <h2>welcome to DFW</h2>
+  </body>
 </html>
